fix: title bar text cutoff

--- a/src/components/toolbar/title-bar/styles/title-bar.module.css
+++ b/src/components/toolbar/title-bar/styles/title-bar.module.css
@@ -14,7 +14,7 @@
 .cell {
     display: flex;
     min-inline-size: 0;
-    align-items: center;
+    align-items: baseline;
     background-color: var(--colors-white);
     padding: 6px;
     border-radius: 5px;
@@ -22,10 +22,11 @@
 
 .title {
     font-size: 13px;
-    line-height: 1;
+    line-height: 1.2;
     font-weight: 500;
     color: var(--colors-grey800);
     min-inline-size: 0;
+    margin-block-start: 2px;
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
